flux/manifests/linkding/linkding-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
spec:
  selector:
    app: linkding
  type: ClusterIP
  ports:
  - name: linkding
    protocol: TCP
    port: 9090
    targetPort: 9090
